crates/ir/tests/snapshots/lower_test__exhaustiveness__match_guard_not_redundant.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module exhaustiveness__match_guard_not_redundant

type Option[a] = Some#0(a) | None#1
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]

fn test(v0: Option[Int]) -> Int =
  switch v0 {
    0 (v1: Int) ->
      let_join v5(v4: Bool) =
        if v4 {
          v1
        } else {
          0
        }
      in
      let v2: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
      let v3: Bool = trait_call core/ord.Ord.lt(v2, 0, v1)
      jump v5(v3)
    1 ->
      0
  }
