crates/ir/tests/snapshots/lower_test__exhaustiveness__match_or_exhaustive_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module exhaustiveness__match_or_exhaustive_bool

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
fn test(v0: Bool, v1: Bool) -> Int =
  let v2: (Bool, Bool) = tuple(v0, v1)
  let v3: Bool = tuple_project v2.0
  let v4: Bool = tuple_project v2.1
  let v9: Bool = eq_int(v3, true)
  if v9 {
    1
  } else {
    let v8: Bool = eq_int(v3, false)
    if v8 {
      let v7: Bool = eq_int(v4, true)
      if v7 {
        1
      } else {
        let v6: Bool = eq_int(v4, false)
        if v6 {
          2
        } else {
          ()
        }
      }
    } else {
      let v5: Bool = eq_int(v4, true)
      if v5 {
        1
      } else {
        ()
      }
    }
  }
